--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.9",
+    "angular-animate": "^1.6.3",
     "angular-aria": "^1.6.3",
     "angular-material": "^1.1.3",
+    "angular-resource": "^1.6.3",
+    "angular-smart-table": "^2.1.8",
     "angular-ui-router": "^0.3.2",
     "browserify": "^13.1.1",
     "gulp": "^3.9.1",
