--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "gulp-uglify": "^2.0.0",
     "ui-router": "^1.0.0-alpha.3",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "babelify": "^7.3.0"
   }
 }
