--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
-    "babelify": "^7.3.0"
+    "babelify": "^7.3.0",
+    "oclazyload": "^1.1.0"
   }
 }
